Added the active contours parts in report
First draft of the active contour parts C.1.2 and C.1.3 are ready ready.
Figures are added.

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,10 @@ $RECYCLE.BIN/
 # Simulink Code Generation
 slprj/
 
+
+Project 4/report/Project4.synctex.gz
+Project 4/report/Project4.pdf
+Project 4/report/Project4.out
+Project 4/report/Project4.log
+Project 4/report/Project4.aux
+Project 4/matlab_plots/figure_1.pdf
